--- a/appsettings.json
+++ b/appsettings.json
@@ -35,8 +35,8 @@
     "FromEmail": "****@gmail.com"
   },
   "SendGrid": {
-    "ApiKey": "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",
-    "FromEmail": "sendgrid@bunlong.site",
+    "ApiKey": "SendGrid_API_Key",
+    "FromEmail": "SendGrid_FromEmail",
     "FromName": "Ecommerce Support"
   }
 }
