--- a/appsettings.json
+++ b/appsettings.json
@@ -44,6 +44,6 @@
     "BaseUrl": "https://storage.googleapis.com",
     "ProjectId": "theta-moment-469209-j0",
     "AuthenticationMethod": "Base64Json",
-    "CredentialBase64": "e"
+    "CredentialBase64": "<Credential-cloud-storage>"
   }
 }
