--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-CQSN3MN\\SQLSERVERDEV2022;Database=Ecommerce;User Id=sa;Password=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Server=<server>,1433;Database=<db>;User Id=sa;Password=<password>;TrustServerCertificate=True"
   },
   "MongoDbSettings": {
-    "MongoDB": "mongodb+srv://cbunlong168_db_user:ooyZ1lqtgsz27dPG@clusterlocal.12eysnm.mongodb.net/?retryWrites=true&w=majority&appName=ClusterLocal",
+    "MongoDB": "mongodb+srv://<mongodb_user>",
     "DatabaseName": "MongoDB",
     "Collections": {
       "ChatImages": "ChatImages"
@@ -44,6 +44,6 @@
     "BaseUrl": "https://storage.googleapis.com",
     "ProjectId": "theta-moment-469209-j0",
     "AuthenticationMethod": "Base64Json",
-    "CredentialBase64": "ewo"
+    "CredentialBase64": "<Credential-cloud-storage>"
   }
 }
