--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ deploy:
     # Create namespace if it doesn't exist
     - kubectl create namespace production --dry-run=client -o yaml | kubectl apply -f -
 
-    # Apply ArgoCD app & DB manifests
+    # Apply ArgoCD app & DB manifests for deployment
     - kubectl apply -f Deploy/k8s/argocd/db/
     - kubectl apply -f Deploy/k8s/argocd/app
 
