--- a/Deploy/k8s/db/sql-server-deployment.yaml
+++ b/Deploy/k8s/db/sql-server-deployment.yaml
@@ -84,7 +84,7 @@ metadata:
   labels:
     app: mssql
 spec:
-  type: LoadBalancer
+  type: ClusterIP # LoadBalancer
   selector:
     app: mssql
   ports:
