--- a/Deploy/k8s/nosql/mongo-deployment.yaml
+++ b/Deploy/k8s/nosql/mongo-deployment.yaml
@@ -139,7 +139,7 @@ metadata:
   labels:
     app: mongodb
 spec:
-  type: ClusterIP # LoadBalancer
+  type: LoadBalancer
   selector:
     app: mongodb
   ports:
