Modify gitlab yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ build:
     - sed -i "s|Password=<password>|Password=$SQLSERVER_PASSWORD|g" appsettings.json
 
     # Update MongoDB connection string to use the internal Kubernetes service
-    - sed -i "s|mongodb+srv://<mongodb_user>|mongodb://$MONGO_USER:$MONGO_PASSWORD@mongodb-service.production.svc.cluster.local:27017/MongoDB?authSource=admin|g" appsettings.json
+    - sed -i "s|mongodb+srv://<mongodb_user>|mongodb://admin:$MONGO_PASSWORD@mongodb-service.production.svc.cluster.local:27017/MongoDB?authSource=admin|g" appsettings.json
 
     - sed -i "s|SendGrid_API_Key|$EMAIL_API|g" appsettings.json
     - sed -i "s|SendGrid_FromEmail|$EMAIL_FROMEMAIL|g" appsettings.json
