Modify gitlab yml 1

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql-service,1433;Database=Ecommerce;User Id=sa;Password=3s9fDb7PvSlYuZv;TrustServerCertificate=True"
+    "DefaultConnection": "Server=<server>,1433;Database=<db>;User Id=sa;Password=<password>;TrustServerCertificate=True"
   },
   "MongoDbSettings": {
-    "MongoDB": "mongodb://mongo_admin:07QmRa1RYrP3oq4@mongodb-service.production.svc.cluster.local:27017/MongoDB?authSource=admin",
+    "MongoDB": "mongodb+srv://<mongodb_user>",
     "DatabaseName": "MongoDB",
     "Collections": {
       "ChatImages": "ChatImages"
