--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=<server>,1433;Database=<db>;User Id=sa;Password=<password>;TrustServerCertificate=True"
+    "DefaultConnection": "Server=<server>"
   },
   "MongoDbSettings": {
     "MongoDB": "mongodb+srv://<mongodb_user>",
