Modify gitlab yml app 2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ build:
     - main
     - develop
 
-# Deploy app & database to GKE using kubectl & ArgoCD
+# Deploy app & database to GKE using kubectl & ArgoCD --
 deploy:
   stage: deploy
   image: google/cloud-sdk:alpine
