--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,15 @@ build:
     # Update appsettings.json with production connection string
     - sed -i "s|Server=<server>|Server=$SQLSERVER_IP,1433;Database=Ecommerce;User Id=sa;Password=$SQLSERVER_PASSWORD;TrustServerCertificate=True|g" appsettings.json
 
-    - sed -i "s@<connection-string-base64>@$CONNECTION_STRING_B64@g" Deploy/k8s/app/aspnet-app-deployment.yaml
+    # Use here document to avoid delimiter conflicts
+    - |
+      cat > temp_replacement.sh << 'EOF'
+      #!/bin/bash
+      sed -i "s/<connection-string-base64>/${CONNECTION_STRING_B64}/g" Deploy/k8s/app/aspnet-app-deployment.yaml
+      EOF
+      chmod +x temp_replacement.sh
+      ./temp_replacement.sh
+      rm temp_replacement.sh
 
     # Update MongoDB connection string to use the internal Kubernetes service
     - sed -i "s|mongodb+srv://<mongodb_user>|mongodb://admin:$MONGO_PASSWORD@mongodb-service.production.svc.cluster.local:27017/MongoDB?authSource=admin|g" appsettings.json
