Modify yaml for Deployment

--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -72,6 +72,8 @@ spec:
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 3
+      restartPolicy: Always
+      imagePullPolicy: Always # Always pull the latest image
 
 ---
 # ASP.NET Service
