--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -159,9 +159,9 @@ metadata:
     nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_id"
     
     # # Add custom headers to pass Cloudflare info to application
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "X-Forwarded-Proto: https";
-      more_set_headers "X-Forwarded-Port: 443";
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   more_set_headers "X-Forwarded-Proto: https";
+    #   more_set_headers "X-Forwarded-Port: 443";
 spec:
   rules:
   - host: ecommerceapi.bunlong.site
