--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -129,7 +129,7 @@ metadata:
   annotations:
     # Use NGINX Ingress Controller
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ingress.class: "nginx"
+    # nginx.ingress.kubernetes.io/ingress.class: "nginx"
     
     # Cloudflare specific annotations
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
@@ -142,14 +142,14 @@ metadata:
     nginx.ingress.kubernetes.io/real-ip-header: "X-Forwarded-For"
     nginx.ingress.kubernetes.io/real-ip-recursive: "true"
     
-    # CORS headers for Swagger and API
+    # CORS headers for Swagger and API   
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://ecommerceapi.bunlong.site,https://www.ecommerceapi.bunlong.site,https://ecommercevue.bunlong.site,https://www.ecommercevue.bunlong.site"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Keep-Alive,Cache-Control,Content-Type,Range,Authorization,Accept,Origin,X-Forwarded-For,X-Forwarded-Proto,x-signalr-user-agent,x-requested-with,x-ms-request-id,connection,upgrade"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/cors-max-age: "86400"
-    
+
     # SSL and security
     nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Let Cloudflare handle HTTPS redirect
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"  # Let Cloudflare handle HTTPS redirect
@@ -157,6 +157,10 @@ metadata:
     # WebSocket and SignalR specific configuration
     nginx.ingress.kubernetes.io/proxy-buffering: "off"
     nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_id"
+    nginx.ingress.kubernetes.io/websocket-services: "aspnet-service"
+
+    # Custom headers
+    nginx.ingress.kubernetes.io/proxy-set-headers: "proxy-headers"
     
     # # Add custom headers to pass Cloudflare info to application
     # nginx.ingress.kubernetes.io/configuration-snippet: |
