--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -156,9 +156,10 @@ metadata:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://ecommerceapi.bunlong.site,https://www.ecommerceapi.bunlong.site,https://ecommercevue.bunlong.site,https://www.ecommercevue.bunlong.site"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Origin,X-SignalR-User-Agent,x-signalr-user-agent"
     # nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Keep-Alive,Cache-Control,Content-Type,Range,Authorization,Accept,Origin,X-Forwarded-For,X-Forwarded-Proto,x-signalr-user-agent,x-requested-with,x-ms-request-id,connection,upgrade"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    # nginx.ingress.kubernetes.io/cors-max-age: "86400"
+    nginx.ingress.kubernetes.io/cors-max-age: "86400"
 
     # SSL and security
     nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Let Cloudflare handle HTTPS redirect
@@ -166,11 +167,14 @@ metadata:
 
     # Use standard annotations instead of snippets
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    nginx.ingress.kubernetes.io/upstream-vhost: "ecommerceapi.bunlong.site"
+    # nginx.ingress.kubernetes.io/upstream-vhost: "ecommerceapi.bunlong.site"
 
     # Add real IP forwarding (safer than snippets)
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
     nginx.ingress.kubernetes.io/enable-real-ip: "true"
+
+    # Proxy headers for proper protocol detection
+    nginx.ingress.kubernetes.io/proxy-set-headers: "production/proxy-headers"
     
     # # Add custom headers to pass Cloudflare info to application
     # nginx.ingress.kubernetes.io/configuration-snippet: |
@@ -198,3 +202,17 @@ spec:
             name: aspnet-service
             port:
               number: 80
+
+---
+# ConfigMap for proxy headers
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: proxy-headers
+  namespace: production
+data:
+  X-Forwarded-Proto: "https"
+  X-Forwarded-Port: "443"
+  X-Forwarded-For: "$proxy_add_x_forwarded_for"
+  X-Real-IP: "$remote_addr"
+  X-Scheme: "https"
